# django-nifty-attachments

./: .gitignore  README.md  dev-guide.md  invoke.yaml  manage.py  pyproject.toml  tox.ini
.github/workflows/: pytest.yaml  release.yaml  tox.yaml
nifty_attachments/: README.md  apps.py  views.py
nifty_attachments/templates/attachments/: add.html
nifty_attachments/templates/attachments/htmx/: as_table_row.html  delete_link.html  related_attachments_as_table_rows.html  uploader.html
nifty_attachments/templates/nifty/attachments/: add.html
nifty_attachments/templates/nifty/attachments/htmx/: related_attachments_as_table_rows.html
nifty_attachments/templatetags/: attachments_tags.py
nifty_attachments/tests/: fixtures.py  test_models.py
nifty_attachments/tests/htmx_clone/: forms.py  middleware.py
nifty_attachments/tests/testapp/: apps.py  settings.py
tasks/: __init__.py  clean.py  docs.py  pypi.py  utils.py
tests/: fixtures.py  test_views.py
